# fastapi-neo4j

./: .env  .env.example  API_MANUAL.md  Dockerfile  README.md  alembic.ini  bash.exe.stackdump  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_uvicorn.sh
app/: config.py  main.py
app/api/: __init__.py  embed.py  proxy.py
app/db/: __init__.py  crud.py  models.py  session.py
app/services/: __init__.py  neo4j_service.py
migrations/: env.py
public/: embed-1.html  embed-2.html  embed.html
scripts/: generate_and_capture.py
