[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-neo4j"
version = "0.1.0"
description = "FastAPI backend for Neo4j embed service (minimal, 2 endpoints)"
authors = [{ name = "Maintainer", email = "maintainer@example.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22",
  "SQLAlchemy>=1.4,<3",
  "asyncpg>=0.27",
  "alembic>=1.11",
  "neo4j>=5.0",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.2"
]

[tool.hatch.build.targets.wheel]
include = ["app/**", "pyproject.toml", "README.md"]
